Adds Realm
